game: set voting when player disconnected
